--- a/questions.html
+++ b/questions.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="내 안에 숨어있는 직업캐 찾기!" />
     <meta property="og:description" content="누구나 찰떡인 직업이 있어요! 내 안에 숨어있는 직업캐를 찾아보세요!" />
     <meta property="og:image" content="/images/thumbnail.jpg" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://mbti-jobtest.netlify.app/" />
 
     <!-- Twitter Cards -->
     <meta property="twitter:card" content="summary" />
@@ -20,7 +20,7 @@
     <meta property="twitter:title" content="내 안에 숨어있는 직업캐 찾기!" />
     <meta property="twitter:description" content="누구나 찰떡인 직업이 있어요! 내 안에 숨어있는 직업캐를 찾아보세요!" />
     <meta property="twitter:image" content="/images/thumbnail.jpg" />
-    <meta property="twitter:url" content="" />
+    <meta property="twitter:url" content="https://mbti-jobtest.netlify.app/" />
 
     <title>내 안에 숨어있는 직업캐 찾기!</title>
     <link rel="icon" href="./favicon.png">
